# mnist-digit-classifier

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: mnist_model.ipynb
pytorch_modules/: data_setup.py  engine.py  utils.py
scripts/: models.py  train_mnist.py
