[project]
name = "mnist-digit-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "tensorboard>=2.18.0",
    "torch-tb-profiler>=0.4.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "msgspec>=0.18.6",
    "streamlit>=1.40.2",
    "streamlit-drawable-canvas>=0.9.3",
]
